--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -123,6 +123,19 @@ h6 {
   font-weight: 100;
 }
 
+code {
+  border: 1px solid #ccc;
+  padding: 3px 5px;
+  background: beige;
+  font-family: monospace;
+  position: relative;
+  color: #555;
+  font-size: 14px;
+  text-shadow: 1px 1px 1px #fff;
+  border-radius: 3px;
+  box-shadow: 0px 5px 10px #ccc inset;
+}
+
 .button, .btn {
   display: inline-block;
   padding: 4px 15px;
@@ -493,6 +506,7 @@ pre {
   position: relative;
   color: #555;
   font-size: 15px;
+  text-shadow: 1px 1px 1px #fff;
   border-radius: 3px;
   box-shadow: 0px 5px 10px #ccc inset;
   & span {
