--- a/css/gisto.css
+++ b/css/gisto.css
@@ -613,6 +613,8 @@ blockquote {
   border-left: 5px solid tomato;
   padding: 10px 0px 10px 10px;
   background: #f2f2f2; }
+  blockquote a {
+    text-decoration: underline; }
 
 .post h3 {
   text-align: center; }
