--- a/css/gisto.scss
+++ b/css/gisto.scss
@@ -763,6 +763,9 @@ blockquote {
   border-left: 5px solid $gisto-color-red;
   padding: 10px 0px 10px 10px;
   background: #f2f2f2;
+  & a {
+    text-decoration: underline;
+  }
 }
 
 .post {
