--- a/css/gisto.css
+++ b/css/gisto.css
@@ -133,13 +133,33 @@ button {
 nav {
   margin: 0px auto 10px; }
 
-.nav-link {
+a.nav-link {
   padding: 0 10px;
   font-size: 16px;
   text-decoration: none;
+  position: relative;
   text-transform: uppercase;
   font-weight: 400; }
-  .nav-link:hover {
+  a.nav-link.active:after, a.nav-link.active:before {
+    bottom: -33px;
+    left: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none; }
+  a.nav-link.active:after {
+    border-color: rgba(136, 183, 213, 0);
+    border-top-color: #fff;
+    border-width: 12px;
+    margin-left: -12px; }
+  a.nav-link.active:before {
+    border-color: rgba(194, 225, 245, 0);
+    border-top-color: rgba(0, 0, 0, 0.16);
+    border-width: 10px;
+    margin-left: -10px; }
+  a.nav-link:hover {
     text-shadow: 1px 1px 1px #fff, 0px 1px 3px tomato;
     color: tomato; }
 
