--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -53,9 +53,9 @@
                     <a href="#download" class="w-col w-col-4 w-clearfix box bg-tomato txt-white uppercase innsite">
                         <i class="icon-download-alt icon-4x pull-left"></i>
 
-                        <h3>Download</h3>
+                        <h3>Downloads</h3>
                 <span>
-                    <i>Downloads, mirrors, nightly builds and prev. versions</i> <i class="icon-chevron-right"></i>
+                    <i>Mirrors, nightly builds and prev. versions</i> <i class="icon-chevron-right"></i>
                 </span>
                     </a>
                 </div>
