--- a/css/gisto.css
+++ b/css/gisto.css
@@ -312,13 +312,13 @@ footer {
     padding: 20px 0; }
 
 .txt-right {
-  text-align: right; }
+  text-align: right !important; }
 
 .txt-left {
-  text-align: left; }
+  text-align: left !important; }
 
 .txt-center {
-  text-align: center; }
+  text-align: center !important; }
 
 .twitter:hover {
   background: #3cf; }
@@ -487,6 +487,67 @@ div .fb_reset {
   position: relative;
   top: -8px; }
 
+#fader {
+  position: relative;
+  width: 100%;
+  max-width: 1366px;
+  margin: 0 auto;
+  top: 0px;
+  text-align: center; }
+  #fader img {
+    position: relative;
+    top: 0;
+    text-align: center;
+    width: 100%;
+    height: auto; }
+
+.page-docs h2,
+.page-faq h2 {
+  border-top: 1px dotted #ccc;
+  padding: 50px 0px 0px 0px; }
+  .page-docs h2:first-child,
+  .page-faq h2:first-child {
+    border-top: none;
+    padding: 0px 0px 0px 0px; }
+
+.home .box {
+  font-size: 0.9em; }
+
+blockquote {
+  margin: 0;
+  font-size: 15px;
+  font-style: italic;
+  color: tomato;
+  border-left: 5px solid tomato;
+  padding: 10px 0px 10px 10px;
+  background: #f2f2f2;
+  text-align: left; }
+  blockquote a {
+    text-decoration: underline; }
+
+.post h3 {
+  text-align: center; }
+.post img {
+  border-radius: 3px;
+  box-shadow: 0px 4px 10px #555; }
+  .post img.alignleft {
+    float: left;
+    border-radius: 3px;
+    box-shadow: 0px 4px 10px #555;
+    margin: 5px 20px 20px 0px;
+    width: auto !important; }
+  .post img.alignright {
+    float: right;
+    border-radius: 3px;
+    box-shadow: 0px 4px 10px #555;
+    margin: 5px 0px 20px 20px;
+    width: auto !important; }
+.post ul li {
+  list-style-type: square;
+  margin: 0px 0px 0px 16px;
+  list-style-position: outside;
+  text-align: left; }
+
 /* Mediaqueries */
 @media screen and (max-width: 479px) {
   html {
@@ -496,8 +557,16 @@ div .fb_reset {
     text-align: center; }
     .w-col p {
       text-align: justify; }
+    .w-col p i {
+      margin: 0 auto; }
     .w-col h1, .w-col h2, .w-col h3, .w-col h4, .w-col h5, .w-col h6 {
       text-align: center; }
+    .w-col .inner h2,
+    .w-col .inner h3,
+    .w-col .inner h4,
+    .w-col .inner h5,
+    .w-col .inner h6 {
+      text-align: center !important; }
 
   .under-nav .box h1, .under-nav .box h2, .under-nav .box h3, .under-nav .box h4, .under-nav .box h5, .under-nav .box h6,
   .content-container h1,
@@ -506,7 +575,7 @@ div .fb_reset {
   .content-container h4,
   .content-container h5,
   .content-container h6 {
-    text-align: left; }
+    text-align: center; }
 
   .side-container h1, .side-container h2, .side-container h3, .side-container h4, .side-container h5, .side-container h6 {
     text-align: center; }
@@ -599,64 +668,5 @@ div .fb_reset {
     width: 50%;
     padding: 15px;
     border-radius: 10px; } }
-#fader {
-  position: relative;
-  width: 100%;
-  max-width: 1366px;
-  margin: 0 auto;
-  top: 0px;
-  text-align: center; }
-  #fader img {
-    position: relative;
-    top: 0;
-    text-align: center;
-    width: 100%;
-    height: auto; }
-
-.page-docs h2,
-.page-faq h2 {
-  border-top: 1px dotted #ccc;
-  padding: 50px 0px 0px 0px; }
-  .page-docs h2:first-child,
-  .page-faq h2:first-child {
-    border-top: none;
-    padding: 0px 0px 0px 0px; }
-
-.home .box {
-  font-size: 0.9em; }
-
-blockquote {
-  margin: 0;
-  font-size: 15px;
-  font-style: italic;
-  color: tomato;
-  border-left: 5px solid tomato;
-  padding: 10px 0px 10px 10px;
-  background: #f2f2f2; }
-  blockquote a {
-    text-decoration: underline; }
-
-.post h3 {
-  text-align: center; }
-.post img {
-  border-radius: 3px;
-  box-shadow: 0px 4px 10px #555; }
-  .post img.alignleft {
-    float: left;
-    border-radius: 3px;
-    box-shadow: 0px 4px 10px #555;
-    margin: 5px 20px 20px 0px;
-    width: auto !important; }
-  .post img.alignright {
-    float: right;
-    border-radius: 3px;
-    box-shadow: 0px 4px 10px #555;
-    margin: 5px 0px 20px 20px;
-    width: auto !important; }
-.post ul li {
-  list-style-type: square;
-  margin: 0px 0px 0px 16px;
-  list-style-position: outside;
-  text-align: left; }
 
 /*# sourceMappingURL=gisto.css.map */
