FIX (navigation): moved changelog
- moved changelog to hero

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -15,7 +15,7 @@
                             class="icon-github"></i></a>
                     <a href="https://twitter.com/gistoapp" class="btn bg-grey twitter txt-white"><i
                             class="icon-twitter"></i></a>
-                    <a href="#about" class="btn bg-grey txt-white innsite">Read more <i
+                    <a href="/changelog/" class="btn bg-grey txt-white">Changelog <i
                             class="icon-arrow-right"></i></a>
                 </div>
                 <!--
