Checking "enjoyhints" for tour option

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,9 @@
         }
     });
 </script>
+<script src="/js/enjoyhint.js"></script>
+<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript">stLight.options({publisher: "6ccdc1be-66dc-486b-bd54-e41e194e96d5", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 <script src="/js/main.js"></script>
 
 </body>
