FIX(slideshow): slide show play button on hero

--- a/src/_includes/hero.html
+++ b/src/_includes/hero.html
@@ -15,20 +15,11 @@
                     <a href="https://twitter.com/gistoapp" class="btn bg-grey twitter txt-white"><i class="fa fa-twitter"></i></a>
                     <a href="/changelog/" class="btn bg-grey txt-white">Changelog <i class="fa fa-arrow-right"></i></a>
                 </div>
-                <!--
-                <a class="w-col w-col-6 w-clearfix video-run">
 
-                </a>
-                -->
-                <div class="w-col w-col-6 w-clearfix video-run">
-                    <img class="" src="../images/theme.gif" width="100%">
-                    <a href="/tour/">
-                  <i>
-                      <span>TAKE THE</span>
-                      TOUR
-                    </i>
-                  </a>
-                </div>
+              <div class="w-col w-col-6 w-clearfix video-run">
+                <img class="" src="../images/theme.gif" width="100%">
+                <i class="fa fa-play-circle-o"></i>
+              </div>
 
             </div>
         </div>
