--- a/src/_includes/hero.html
+++ b/src/_includes/hero.html
@@ -6,10 +6,10 @@
         <div class="w-container">
             <div class="w-row">
                 <div class="w-col w-col-6 w-clearfix not-a-player">
-                    <p>Gisto is a cross-platform gist snippets management desktop application that allows you
-                        to manage and share your gists easily.
-                        Gisto uses GitHub gists infrastructure which means all your existing gists
-                        are accessible from both Gisto and GitHub gists website.
+                    <p>Gisto is a code snippet manager that runs on GitHub Gists and adds additional features
+                        such as searching, tagging and sharing gists while including a rich code editor.
+                        All your data is stored on GitHub and you can access it from GitHub Gists at any time with changes
+                        carrying over to Gisto.
                     </p>
                     <a href="https://github.com/Gisto/Gisto" class="btn bg-grey txt-white"><i class="fa fa-github"></i></a>
                     <a href="https://twitter.com/gistoapp" class="btn bg-grey twitter txt-white"><i class="fa fa-twitter"></i></a>
