--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -25,10 +25,7 @@ layout: post
 
             <br />
 
-            <a href="javascript:sharePost('http://twitter.com/share?url={{site.url}}{{page.url}}&amp;text={{page.title}} @gistoapp','Sahare {{page.title}} via Twitter',520,350);" class="btn bg-grey twitter txt-white"><i class="fa fa-twitter"></i></a>
-            <a href="javascript:sharePost('http://www.facebook.com/sharer.php?p[title]=Gisto&p[summary]={{page.title}}&p[url]={{site.url}}{{page.url}}{%if page.image %}&p[images][0]={{site.url}}{{page.image}}{% else %}{% endif %}','Sahare {{page.title}} via Facebook',520,350);" class="btn bg-grey fb txt-white"><i class="fa fa-facebook"></i></a>
-            <a href="javascript:sharePost('https://plus.google.com/share?url={{site.url}}{{page.url}}','Sahare {{page.title}} via Google+',520,350);" class="btn bg-grey gplus txt-white"><i class="fa fa-google-plus"></i></a>
-            <a href="mailto:?Subject=Gisto: {{page.title}}&amp;Body={{page.title}} at {{site.url}}{{page.url}}" class="btn bg-grey txt-white"><i class="fa fa-envelope"></i></a>
+            {% include social.html %}
 
         </div>
 
@@ -43,24 +40,9 @@ layout: post
 
     <div class="w-container main content-container">
         <div class="w-row w-col">
-            <div id="disqus_thread"></div>
-            <script type="text/javascript">
-                /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-                var disqus_shortname = 'gisto'; // required: replace example with your forum shortname
 
-                /* * * DON'T EDIT BELOW THIS LINE * * */
-                (function () {
-                    var dsq = document.createElement('script');
-                    dsq.type = 'text/javascript';
-                    dsq.async = true;
-                    dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                })();
-            </script>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered
-                by Disqus.</a></noscript>
+            {% include comments.html %}
 
-        </div>
     </div>
 </section>
 
