--- a/src/_includes/hero.html
+++ b/src/_includes/hero.html
@@ -89,10 +89,10 @@
                 })();
             </script>
 
-            <iframe src="http://ghbtns.com/github-btn.html?user=gisto&repo=gisto&type=fork&count=true"
+            <iframe src="https://ghbtns.com/github-btn.html?user=gisto&repo=gisto&type=fork&count=true"
                     allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
 
-            <iframe src="http://ghbtns.com/github-btn.html?user=gisto&repo=gisto&type=watch&count=true"
+            <iframe src="https://ghbtns.com/github-btn.html?user=gisto&repo=gisto&type=watch&count=true"
                     allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
 
             <div id="fb-root"></div>
@@ -104,7 +104,7 @@
                 js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));</script>
-            <div class="fb-like" data-href="http://gistoapp.com" data-layout="button_count" data-action="like"
+            <div class="fb-like" data-href="https://gistoapp.com" data-layout="button_count" data-action="like"
                  data-show-faces="false" data-share="true"></div>
 
         </div>
