--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -37,7 +37,7 @@
         }
     });
 </script>
-<script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
+<script type="text/javascript" src="https://ws.sharethis.com/button/buttons.js"></script>
 <script type="text/javascript">stLight.options({publisher: "6ccdc1be-66dc-486b-bd54-e41e194e96d5", doNotHash: false, doNotCopy: false, hashAddressBar: false});</script>
 
 <script src="/js/script.js"></script>
