FIx site for new Gisto version

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -33,7 +33,7 @@
 <script>
     WebFont.load({
         google: {
-            families: ["Open Sans:300,400,600,700,800"]
+            families: ["Open Sans:300,400,600,700,800", "Roboto:300,400,600,700,800"]
         }
     });
 </script>
