--- a/src/_includes/hero.html
+++ b/src/_includes/hero.html
@@ -8,6 +8,8 @@
                 <div class="w-col w-col-6 w-clearfix not-a-player">
                     <p>Gisto is a code snippet manager that runs on GitHub Gists and adds additional features
                         such as searching, tagging and sharing gists while including a rich code editor.
+                    </p>
+                    <p>
                         All your data is stored on GitHub and you can access it from GitHub Gists at any time with changes
                         carrying over to Gisto.
                     </p>
@@ -16,9 +18,8 @@
                     <a href="/changelog/" class="btn bg-grey txt-white">Changelog <i class="fa fa-arrow-right"></i></a>
                 </div>
 
-              <div class="w-col w-col-6 w-clearfix video-run">
-                <img class="" src="../images/theme.gif" width="100%">
-                <i class="fa fa-play-circle-o"></i>
+              <div class="w-col w-col-6 w-clearfix app-image">
+                <img class="" src="../images/gisto-dashboard.png" width="100%">
               </div>
 
             </div>
@@ -111,29 +112,6 @@
 
         <h1>Features</h1>
 
-    </div>
-
-    <div class="hero-video w-clearfix">
-        <a class="close-video"><i class="fa fa-times"></i></a>
-        <!--        <a class="next-video"><i class="icon-forward"></i></a>
-                <a class="prev-video"><i class="icon-backward"></i></a>-->
-        <!-- We will add video later, screenshots for now -->
-        <!--<video id="movie" preload>
-            <source src="/video/gisto.webm" type="video/webm; codecs=vp8,vorbis" />
-            <source src="/video/gisto.ogv" type="video/ogg; codecs=theora,vorbis" />
-            <source src="/video/gisto.mp4" />
-        </video>-->
-        <div id="fader">
-            <img src="/images/screenshots/3-gist-view.png">
-            <img src="/images/screenshots/4-edit.png">
-            <img src="/images/screenshots/5-ace-plugins-emmet.png">
-            <img src="/images/screenshots/6-settings.png">
-            <img src="/images/screenshots/7-search.png">
-            <img src="/images/screenshots/8-browse-revisions.png">
-            <img src="/images/screenshots/9-add-comment.png">
-            <img src="/images/screenshots/10-view-comment.png">
-
-        </div>
     </div>
 
 </section>
