--- a/src/_includes/downloads.html
+++ b/src/_includes/downloads.html
@@ -19,26 +19,26 @@
                     <p class="txt-center"><i class="fa fa-windows fa-4x"></i></p>
 
                     <h3><b>Windown</b><br/>Download</h3>
-                    <a href="{{ download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.exe"><b>exe</b></a>
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.exe"><b>exe</b></a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
 
                     <h3><b>macOS</b><br/>Download</h3>
-                    <a href="{{ download_url }}/download/{{ current_version }}/Gisto-v{{ current_version }}-macos-x64.dmg"><b>dmg</b></a> |
-                    <a href="{{ download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.zip"><b>zip</b></a>
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.dmg"><b>dmg</b></a> |
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.zip"><b>zip</b></a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
 
                     <h3><b>Linux</b><br/>Download</h3>
-                    <a href="{{ download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.deb"><b>deb</b></a> |
-                    <a href="{{ download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.snap"><b>snap</b></a> |
-                    <a href="{{ download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.AppImage"><b>AppImage</b></a> |
-                    <a href="{{ download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.rpm"><b>rpm</b></a> |
-                    <a href="{{ download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.pacman"><b>pacman</b></a>
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.deb"><b>deb</b></a> |
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.snap"><b>snap</b></a> |
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.AppImage"><b>AppImage</b></a> |
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.rpm"><b>rpm</b></a> |
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.pacman"><b>pacman</b></a>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
@@ -58,10 +58,10 @@
                 <br/>
 
                 <div class="download w-col w-col-12 w-clearfix txt-center">
-                    <i class="fa fa-windows"></i> <a href="{{ download_url }}/download/0.3.2-beta/Gisto-v0.3.2-windows-x64.zip">Windows</a>
-                    <i class="fa fa-apple"></i> <a href="{{ download_url }}/download/0.3.2-beta/Gisto-v0.3.2-macos-x64.dmg">MACOS</a>
-                    <i class="fa fa-linux"></i> <a href="{{ download_url }}/download/0.3.2-beta/Gisto-v0.3.2-linux-win32.zip">Linux 32bit</a>
-                    <i class="fa fa-linux"></i> <a href="{{ download_url }}/download/0.3.2-beta/Gisto-v0.3.2-linux-x64.zip">Linux 64bit</a>
+                    <i class="fa fa-windows"></i> <a href="{{ site.download_url }}/download/0.3.2-beta/Gisto-v0.3.2-windows-x64.zip">Windows</a>
+                    <i class="fa fa-apple"></i> <a href="{{ site.download_url }}/download/0.3.2-beta/Gisto-v0.3.2-macos-x64.dmg">MACOS</a>
+                    <i class="fa fa-linux"></i> <a href="{{ site.download_url }}/download/0.3.2-beta/Gisto-v0.3.2-linux-win32.zip">Linux 32bit</a>
+                    <i class="fa fa-linux"></i> <a href="{{ site.download_url }}/download/0.3.2-beta/Gisto-v0.3.2-linux-x64.zip">Linux 64bit</a>
                 </DIV>
 
             </div>
