FIX (downloads): typo

--- a/src/_includes/downloads.html
+++ b/src/_includes/downloads.html
@@ -18,7 +18,7 @@
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="fa fa-windows fa-4x"></i></p>
 
-                    <h3><b>Windown</b><br/>Download</h3>
+                    <h3><b>Windows</b><br/>Download</h3>
                     <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.exe"><b>exe</b></a>
                 </div>
 
