--- a/src/_includes/hero.html
+++ b/src/_includes/hero.html
@@ -15,7 +15,7 @@
                     </p>
                     <a href="https://github.com/Gisto/Gisto" class="btn bg-grey txt-white"><i class="fa fa-github"></i></a>
                     <a href="https://twitter.com/gistoapp" class="btn bg-grey twitter txt-white"><i class="fa fa-twitter"></i></a>
-                    <a href="/changelog/" class="btn bg-grey txt-white">Changelog <i class="fa fa-arrow-right"></i></a>
+                    <a href="https://github.com/Gisto/Gisto/blob/master/CHANGELOG.md" class="btn bg-grey txt-white">Changelog <i class="fa fa-arrow-right"></i></a>
                 </div>
 
               <div class="w-col w-col-6 w-clearfix app-image">
