--- a/src/_includes/downloads.html
+++ b/src/_includes/downloads.html
@@ -26,7 +26,7 @@
                     <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
 
                     <h3><b>macOS</b><br/>Download</h3>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.dmg"><b>dmg</b></a> |
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.dmg"><b>dmg</b></a>
                     <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.zip"><b>zip</b></a>
                 </div>
 
@@ -34,10 +34,10 @@
                     <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
 
                     <h3><b>Linux</b><br/>Download</h3>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.deb"><b>deb</b></a> |
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.snap"><b>snap</b></a> |
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.AppImage"><b>AppImage</b></a> |
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.rpm"><b>rpm</b></a> |
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.deb"><b>deb</b></a>
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.snap"><b>snap</b></a>
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.AppImage"><b>AppImage</b></a>
+                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.rpm"><b>rpm</b></a>
                     <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.pacman"><b>pacman</b></a>
                 </div>
 
