--- a/src/css/gisto.scss
+++ b/src/css/gisto.scss
@@ -446,10 +446,13 @@ ul {
   }
   & a {
     color: $gisto-color-grey;
-    //    border: 1px solid $gisto-color-grey;
-    background: transparent;
-    padding: 5px 10px;
+    border: 1px solid $gisto-color-grey;
+    padding: 1px 10px;
     border-radius: 3px;
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-right: 10px; 
+
     &:hover {
       color: #fff;
       background: #555;
