--- a/src/_includes/hero.html
+++ b/src/_includes/hero.html
@@ -51,12 +51,12 @@
                     <i>List of features and new additions</i> <i class="fa fa-chevron-right"></i>
                 </span>
                     </a>
-                    <a href="#about" class="w-col w-col-4 w-clearfix box bg-greyer txt-white uppercase innsite">
+                    <a href="https://web.gistoapp.com" class="w-col w-col-4 w-clearfix box bg-greyer txt-white uppercase">
                         <i class="fa fa-laptop fa-4x pull-left"></i>
 
-                        <h3>Multi-platform</h3>
+                        <h3>Web client</h3>
                 <span>
-                    <i>Available on Windows, Linux and OSX</i> <i class="fa fa-chevron-right"></i>
+                    <i>Full featured web client is now available</i> <i class="fa fa-chevron-right"></i>
                 </span>
                     </a>
                     <a href="#download" class="w-col w-col-4 w-clearfix box bg-tomato txt-white uppercase innsite">
