--- a/src/_includes/downloads.html
+++ b/src/_includes/downloads.html
@@ -52,6 +52,26 @@
 
             </div>
 
+            <div class="w-container">
+                <div class="w-row">
+                    <div class="w-col w-col-pull-1 w-col-push-3 w-col-6 ">
+                        <h2>Other install options:</h2>
+
+                        <p>via <b>Homebrew cask</b>:
+                        <pre><span>SHELL</span>$ brew cask install gisto</pre>
+                        <small>Please note that it might be slightly outdated version</small>
+                        </p>
+                        <!--<p>via <b>Archlinux AUR</b>:-->
+                        <!--<pre><span>SHELL</span>$ yaourt -S gisto</pre>-->
+                        <!--</p>-->
+                        <!--<p>via <b>SlackBuilds.org (Slackware)</b>:-->
+                        <!--<pre><span>SHELL</span># sbopkg -i gisto</pre>-->
+                        <!--</p>-->
+
+                    </div>
+                </div>
+            </div>
+
             <div class="w-row">
 
                 <p class="txt-grey txt-center"><b>PREVIOUS VERSION:</b> 0.3.2</p>
@@ -76,25 +96,6 @@
                 </DIV>
 
             </div>
-
-            <!--<div class="w-container">-->
-            <!--<div class="w-row">-->
-            <!--<div class="w-col w-col-pull-1 w-col-push-3 w-col-6 ">-->
-            <!--<h2>Other install options:</h2>-->
-
-            <!--<p>via <b>Homebrew cask</b>:-->
-            <!--<pre><span>SHELL</span>$ brew cask install gisto</pre>-->
-            <!--</p>-->
-            <!--<p>via <b>Archlinux AUR</b>:-->
-            <!--<pre><span>SHELL</span>$ yaourt -S gisto</pre>-->
-            <!--</p>-->
-            <!--<p>via <b>SlackBuilds.org (Slackware)</b>:-->
-            <!--<pre><span>SHELL</span># sbopkg -i gisto</pre>-->
-            <!--</p>-->
-
-            <!--</div>-->
-            <!--</div>-->
-            <!--</div>-->
 
 
         </div>
