FIX (release): download read from github releases

--- a/src/_includes/hero.html
+++ b/src/_includes/hero.html
@@ -62,12 +62,7 @@
                     <a href="#download" class="w-col w-col-4 w-clearfix box bg-tomato txt-white uppercase innsite">
                         <i class="fa fa-download fa-4x pull-left"></i>
 
-                        <h3>Downloads <sup>v{% for v in site.releases %}
-                          {% if forloop.first %}
-                          {% assign current_version=v.version %}
-                          {{ current_version }}
-                          {% endif %}
-                          {% endfor %}</sup></h3>
+                        <h3>Downloads <sup class="latest-release-version"></sup></h3>
                 <span>
                     <i>Mirrors, nightly builds and prev. versions</i> <i class="fa fa-chevron-right"></i>
                 </span>
