--- a/src/_includes/downloads.html
+++ b/src/_includes/downloads.html
@@ -3,14 +3,9 @@
     <div class="w-container">
 
         <p class="txt-grey txt-center"><b>LATEST VERSION:</b>
-            {% for v in site.releases %}
-            {% if forloop.first %}
-            {% assign current_version=v.version %}
-            {{ current_version }}
-            {% endif %}
-            {% endfor %} |
+            <span class="latest-release-version"></span> |
             <a href="https://github.com/Gisto/Gisto/blob/master/CHANGELOG.md" class="txt-red txt-underline">Change log</a>
-            | <b>RELEASED:</b> {{ site.gisto_build_date }}</p>
+            | <b>RELEASED:</b> <span class="published_at"></span></p>
         <br/>
 
         <div class="w-container">
@@ -21,32 +16,27 @@
                     <p class="txt-center"><i class="fa fa-windows fa-4x"></i></p>
 
                     <h3><b>Windows</b><br/>Download</h3>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.exe"><b>exe</b></a>
+                    <span class="windows-downloads"></span>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="fa fa-apple fa-4x"></i></p>
 
                     <h3><b>macOS</b><br/>Download</h3>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.dmg"><b>dmg</b></a>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.zip"><b>zip</b></a>
+                    <span class="mac-downloads"></span>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="fa fa-linux fa-4x"></i></p>
 
                     <h3><b>Linux</b><br/>Download</h3>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.deb"><b>deb</b></a>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-amd64.snap"><b>snap</b></a>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.AppImage"><b>AppImage</b></a>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}-x86_64.rpm"><b>rpm</b></a>
-                    <a href="{{ site.download_url }}/download/v{{ current_version }}/Gisto-{{ current_version }}.pacman"><b>pacman</b></a>
+                    <span class="linux-downloads"></span>
                 </div>
 
                 <div class="download w-col w-col-3 w-clearfix txt-center">
                     <p class="txt-center"><i class="fa fa-cogs fa-4x"></i></p>
 
-                    <h3>Nightly<br/> <b>Download</b></h3>
+                    <h3>Latest<br/> <b>from Github</b></h3>
                     <a href="{{ site.nightly_url }}">GitHub releases</a>
                 </div>
 
